@@ -103,8 +103,6 @@
  * rather than depending on a predefined index.
  */
 
-#define MAX_RESOURCES 200 /* max. size of svr_resc_def */
-
 typedef struct resource {
 	list_link 	     rs_link;	/* link to other resources in list */
 	struct resource_def *rs_defin;	/* pointer to definition entry */
@@ -126,7 +124,7 @@ typedef struct resource_def {
 /* the resource definition array, only the fixed resources */
 extern resource_def svr_resc_def_const[];  
 
-/* svr_resc_def_const + resource in $PBS_SERVER_HOME/resourcedef */
+/* svr_resc_def_const + resources in "extra_resc" server attr */
 extern resource_def *svr_resc_def;        
 
 /* size (num elements) in above  */
